start cleaning up (moving stuff to laptop)